--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 </head>
 <body>
 
-  <h1>Meu primeiro site</h1>
+  <h1>AKL FASHION&BEAUTY</h1>
 
   <p>
-    Site criado passo a passo, sem pagar nada.
+   Bem-vinda(o)!
+Temos peças para todos os momentos, do descanso ao movimento, com conforto, praticidade e confiança. Explore e encontre seu estilo.
   </p>
 
 </body>
