--- a/index.html
+++ b/index.html
@@ -13,5 +13,20 @@
 Temos peças para todos os momentos, do descanso ao movimento, com conforto, praticidade e confiança. Explore e encontre seu estilo.
   </p>
 
+</<body>
+
+  <h1>LOJA DE ROUPAS</h1>
+
+  <p>
+    Trabalhamos com venda de roupas adultas e infantis.
+    Lingeries, cuecas, meias, leggings, tops e pijamas.
+    Qualidade, conforto e ótimo preço.
+  </p>
+
+  <a href="https://wa.me/5541997304061" target="_blank">
+    Comprar pelo WhatsApp
+  </a>
+
 </body>
+>
 </html>
