--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>Meu Site</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-  <h1>AKL FASHION&BEAUTY</h1>
+  <h1>AKL FASHION & BEAUTY</h1>
 
   <p>
-   Bem-vinda(o)!
-Temos peças para todos os momentos, do descanso ao movimento, com conforto, praticidade e confiança. Explore e encontre seu estilo.
+    Bem-vindo(a)!  
+    Temos peças para todos os momentos, do descanso ao movimento,
+    com conforto, praticidade e confiança.
+    Explore e encontre seu estilo.
   </p>
 
-</<body>
-
-  <h1>LOJA DE ROUPAS</h1>
+  <h2>Loja de Roupas</h2>
 
   <p>
-    Trabalhamos com venda de roupas adultas e infantis.
-    Lingeries, cuecas, meias, leggings, tops e pijamas.
+    Trabalhamos com venda de roupas adultas e infantis.  
+    Lingeries, cuecas, meias, leggings, tops e pijamas.  
     Qualidade, conforto e ótimo preço.
   </p>
 
@@ -28,5 +30,4 @@ Temos peças para todos os momentos, do descanso ao movimento, com conforto, pra
   </a>
 
 </body>
->
 </html>
