--- a/index.html
+++ b/index.html
@@ -1,33 +1,97 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Meu Site</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Minha Loja</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <h1>AKL FASHION & BEAUTY</h1>
+  <!-- BANNER -->
+  <header class="banner">
+    <h1>Minha Loja</h1>
+    <p>Conforto, estilo e qualidade em cada detalhe</p>
+  </header>
 
-  <p>
-    Bem-vindo(a)!  
-    Temos peças para todos os momentos, do descanso ao movimento,
-    com conforto, praticidade e confiança.
-    Explore e encontre seu estilo.
-  </p>
+  <!-- SOBRE -->
+  <section class="sobre">
+    <p>
+      Nossa loja oferece roupas adultas e infantis com foco em conforto,
+      qualidade e bom gosto, pensadas para o dia a dia de toda a família.
+    </p>
+  </section>
 
-  <h2>Loja de Roupas</h2>
+  <!-- ================= LINGERIES ================= -->
+  <section class="categoria">
+    <h2>Lingeries</h2>
+    <div class="produtos">
 
-  <p>
-    Trabalhamos com venda de roupas adultas e infantis.  
-    Lingeries, cuecas, meias, leggings, tops e pijamas.  
-    Qualidade, conforto e ótimo preço.
-  </p>
+      <div class="produto">
+        <img src="imagens/lingerie1.jpg" alt="Lingerie">
+        <h3>Lingerie renda preta</h3>
+        <span>R$ 49,90</span>
+        <a href="https://wa.me/5541997304061?text=Olá!%20Quero%20comprar%20a%20Lingerie%20renda%20preta%20por%20R$49,90"
+           target="_blank">COMPRAR</a>
+      </div>
 
-  <a href="https://wa.me/5541997304061" target="_blank">
-    Comprar pelo WhatsApp
-  </a>
+      <!-- COPIE ESTE BLOCO PARA MAIS PRODUTOS -->
+    </div>
+  </section>
+
+  <!-- ================= CUECAS ================= -->
+  <section class="categoria">
+    <h2>Cuecas</h2>
+    <div class="produtos">
+
+      <div class="produto">
+        <img src="imagens/cueca1.jpg" alt="Cueca">
+        <h3>Cueca algodão</h3>
+        <span>R$ 29,90</span>
+        <a href="https://wa.me/5541997304061?text=Olá!%20Quero%20comprar%20a%20Cueca%20algodão%20por%20R$29,90"
+           target="_blank">COMPRAR</a>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- ================= MEIAS ================= -->
+  <section class="categoria">
+    <h2>Meias</h2>
+    <div class="produtos">
+      <!-- produtos -->
+    </div>
+  </section>
+
+  <!-- ================= LEGGINGS ================= -->
+  <section class="categoria">
+    <h2>Leggings</h2>
+    <div class="produtos"></div>
+  </section>
+
+  <!-- ================= TOPS ================= -->
+  <section class="categoria">
+    <h2>Tops</h2>
+    <div class="produtos"></div>
+  </section>
+
+  <!-- ================= PIJAMAS ADULTO ================= -->
+  <section class="categoria">
+    <h2>Pijamas Adulto</h2>
+    <div class="produtos"></div>
+  </section>
+
+  <!-- ================= PIJAMAS INFANTIL ================= -->
+  <section class="categoria">
+    <h2>Pijamas Infantil</h2>
+    <div class="produtos"></div>
+  </section>
+
+  <!-- RODAPÉ -->
+  <footer>
+    <p>© Minha Loja - Todos os direitos reservados</p>
+  </footer>
 
 </body>
 </html>
