--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@
     <div class="produtos">
 
       <div class="produto">
-        <img src="imagens/lingerie1.jpg" alt="Lingerie">
+        <img src="https://via.placeholder.com/400x400.png?text=Lingerie" alt="Lingerie">
         <h3>Lingerie renda preta</h3>
         <span>R$ 49,90</span>
-        <a href="https://wa.me/5541997304061?text=Olá!%20Quero%20comprar%20a%20Lingerie%20renda%20preta%20por%20R$49,90"
+        <a href="https://wa.me/5541997304061?text=Ol%C3%A1!%20Quero%20comprar%20a%20Lingerie%20renda%20preta%20por%20R%24%2049%2C90.%20Consulte%20tamanhos%20e%20cores%20dispon%C3%ADveis."
            target="_blank">COMPRAR</a>
       </div>
 
-      <!-- COPIE ESTE BLOCO PARA MAIS PRODUTOS -->
     </div>
   </section>
 
@@ -46,10 +45,10 @@
     <div class="produtos">
 
       <div class="produto">
-        <img src="imagens/cueca1.jpg" alt="Cueca">
+        <img src="https://via.placeholder.com/400x400.png?text=Cueca" alt="Cueca">
         <h3>Cueca algodão</h3>
         <span>R$ 29,90</span>
-        <a href="https://wa.me/5541997304061?text=Olá!%20Quero%20comprar%20a%20Cueca%20algodão%20por%20R$29,90"
+        <a href="https://wa.me/5541997304061?text=Ol%C3%A1!%20Quero%20comprar%20a%20Cueca%20algod%C3%A3o%20por%20R%24%2029%2C90.%20Consulte%20tamanhos%20e%20cores%20dispon%C3%ADveis."
            target="_blank">COMPRAR</a>
       </div>
 
@@ -59,9 +58,7 @@
   <!-- ================= MEIAS ================= -->
   <section class="categoria">
     <h2>Meias</h2>
-    <div class="produtos">
-      <!-- produtos -->
-    </div>
+    <div class="produtos"></div>
   </section>
 
   <!-- ================= LEGGINGS ================= -->
