--- a/index.html
+++ b/index.html
@@ -3,17 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minha Loja</title>
+  <title>AKL Fashion & Beauty</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
   <!-- BANNER -->
-  <header class="banner">
-    <h1>Minha Loja</h1>
-    <p>Conforto, estilo e qualidade em cada detalhe</p>
-  </header>
+  <header class="banner"></header>
 
   <!-- SOBRE -->
   <section class="sobre">
@@ -87,7 +84,7 @@
 
   <!-- RODAPÉ -->
   <footer>
-    <p>© Minha Loja - Todos os direitos reservados</p>
+    <p>© AKL Fashion & Beauty - Todos os direitos reservados</p>
   </footer>
 
 </body>
