--- a/index.html
+++ b/index.html
@@ -9,113 +9,56 @@
 
 <body>
 
-  <!-- HEADER / BANNER -->
-  <header class="topo">
-    <div class="banner"></div>
+  <!-- TOPO -->
+  <header class="topbar">
+    <div class="wrap topbar-inner">
+      <div class="brand">
+        <div class="brand-logo"></div>
+        <div class="brand-text">
+          <strong>AKL Fashion & Beauty</strong>
+          <span>Conforto, qualidade e praticidade</span>
+        </div>
+      </div>
 
-    <div class="topo-texto">
-      <h1>AKL Fashion & Beauty</h1>
-      <p>Conforto, estilo e qualidade em cada detalhe.</p>
-      <a class="btn-principal" href="#produtos">Ver produtos</a>
+      <a class="btn-whats" target="_blank"
+         href="https://wa.me/5541997304061?text=Ol%C3%A1!%20Quero%20fazer%20um%20pedido.%20Consulte%20tamanhos%20e%20cores%20dispon%C3%ADveis.">
+        Falar no WhatsApp
+      </a>
     </div>
   </header>
 
-  <!-- SOBRE -->
-  <section class="container">
-    <div class="sobre">
-      <h2>Sobre a loja</h2>
-      <p>
-        Nossa loja oferece roupas e acessórios com foco em conforto,
-        qualidade e bom gosto, pensadas para o dia a dia.
-      </p>
-    </div>
+  <!-- BANNERS PEQUENOS -->
+  <section class="wrap banners">
+    <article class="banner-card">
+      <img src="banner1.png" alt="Banner conforto">
+    </article>
+
+    <article class="banner-card">
+      <img src="Banner2.png" alt="Banner básico">
+    </article>
+
+    <article class="banner-card">
+      <img src="Banner3.png" alt="Banner AKL">
+    </article>
   </section>
 
   <!-- PRODUTOS -->
-  <main class="container" id="produtos">
+  <main class="wrap">
+    <div class="section-title">
+      <h2>Produtos</h2>
+      <p>Clique em comprar e fale direto pelo WhatsApp.</p>
+    </div>
 
-    <!-- ================= LINGERIES ================= -->
-    <section class="categoria">
-      <div class="categoria-topo">
-        <h2>Lingeries</h2>
-      </div>
-
-      <div class="produtos">
-        <div class="produto">
-          <img src="https://via.placeholder.com/500x500.png?text=Lingerie" alt="Lingerie">
-          <h3>Lingerie renda preta</h3>
-          <span class="preco">R$ 49,90</span>
-          <a class="btn-comprar"
-             href="https://wa.me/5541997304061?text=Ol%C3%A1!%20Quero%20comprar%20a%20Lingerie%20renda%20preta%20por%20R%24%2049%2C90.%20Consulte%20tamanhos%20e%20cores%20dispon%C3%ADveis."
-             target="_blank" rel="noopener">Comprar no WhatsApp</a>
-        </div>
-      </div>
-    </section>
-
-    <!-- ================= CUECAS ================= -->
-    <section class="categoria">
-      <div class="categoria-topo">
-        <h2>Cuecas</h2>
-      </div>
-
-      <div class="produtos">
-        <div class="produto">
-          <img src="https://via.placeholder.com/500x500.png?text=Cueca" alt="Cueca">
-          <h3>Cueca algodão</h3>
-          <span class="preco">R$ 29,90</span>
-          <a class="btn-comprar"
-             href="https://wa.me/5541997304061?text=Ol%C3%A1!%20Quero%20comprar%20a%20Cueca%20algod%C3%A3o%20por%20R%24%2029%2C90.%20Consulte%20tamanhos%20e%20cores%20dispon%C3%ADveis."
-             target="_blank" rel="noopener">Comprar no WhatsApp</a>
-        </div>
-      </div>
-    </section>
-
-    <!-- ================= MEIAS ================= -->
-    <section class="categoria">
-      <div class="categoria-topo">
-        <h2>Meias</h2>
-      </div>
-      <div class="produtos"></div>
-    </section>
-
-    <!-- ================= LEGGINGS ================= -->
-    <section class="categoria">
-      <div class="categoria-topo">
-        <h2>Leggings</h2>
-      </div>
-      <div class="produtos"></div>
-    </section>
-
-    <!-- ================= TOPS ================= -->
-    <section class="categoria">
-      <div class="categoria-topo">
-        <h2>Tops</h2>
-      </div>
-      <div class="produtos"></div>
-    </section>
-
-    <!-- ================= PIJAMAS ADULTO ================= -->
-    <section class="categoria">
-      <div class="categoria-topo">
-        <h2>Pijamas Adulto</h2>
-      </div>
-      <div class="produtos"></div>
-    </section>
-
-    <!-- ================= PIJAMAS INFANTIL ================= -->
-    <section class="categoria">
-      <div class="categoria-topo">
-        <h2>Pijamas Infantil</h2>
-      </div>
-      <div class="produtos"></div>
-    </section>
-
+    <section id="grid-produtos" class="grid"></section>
   </main>
 
   <!-- RODAPÉ -->
-  <footer class="rodape">
-    <p>© AKL Fashion & Beauty - Todos os direitos reservados</p>
+  <footer class="footer">
+    <div class="wrap footer-inner">
+      <p>© AKL Fashion & Beauty - Todos os direitos reservados</p>
+    </div>
   </footer>
 
+  <script src="script.js"></script>
 </body>
 </html>
