--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -13,14 +14,14 @@
   <header class="topbar">
     <div class="wrap topbar-inner">
       <div class="brand">
-        <div class="brand-logo"></div>
+        <div class="brand-logo" aria-hidden="true"></div>
         <div class="brand-text">
           <strong>AKL Fashion & Beauty</strong>
           <span>Conforto, qualidade e praticidade</span>
         </div>
       </div>
 
-      <a class="btn-whats" target="_blank"
+      <a class="btn-whats" target="_blank" rel="noopener"
          href="https://wa.me/5541997304061?text=Ol%C3%A1!%20Quero%20fazer%20um%20pedido.%20Consulte%20tamanhos%20e%20cores%20dispon%C3%ADveis.">
         Falar no WhatsApp
       </a>
@@ -30,15 +31,15 @@
   <!-- BANNERS PEQUENOS -->
   <section class="wrap banners">
     <article class="banner-card">
-      <img src="banner1.png" alt="Banner conforto">
+      <img src="banner1.png.png" alt="Banner 1">
     </article>
 
     <article class="banner-card">
-      <img src="Banner2.png" alt="Banner básico">
+      <img src="banner2.png.png" alt="Banner 2">
     </article>
 
     <article class="banner-card">
-      <img src="Banner3.png" alt="Banner AKL">
+      <img src="banner3.png.png" alt="Banner 3">
     </article>
   </section>
 
