--- a/index.html
+++ b/index.html
@@ -8,141 +8,58 @@
 </head>
 <body>
 
-  <!-- Topbar -->
-  <header class="topbar">
-    <div class="wrap topbar-grid">
-      <div class="brand">
-        <div class="logo" aria-label="Logo AKL"></div>
-
-        <div class="brand-text">
-          <div class="brand-title">AKL FASHION&BEAUTY</div>
-          <div class="brand-sub">
-            Bem-vinda(o)! <br />
-            Temos peças para todos os momentos, do descanso ao movimento, com conforto, praticidade e confiança.
-            Explore e encontre seu estilo.
-          </div>
-        </div>
-      </div>
-
-      <div class="top-actions">
-        <div class="search">
-          <input id="searchInput" type="search" placeholder="Buscar por produto" />
-          <button id="searchBtn" class="icon-btn" title="Buscar" aria-label="Buscar">🔎</button>
-        </div>
-        <button class="icon-btn" title="Conta" aria-label="Conta">👤</button>
-        <button class="icon-btn" title="Carrinho" aria-label="Carrinho">🛒</button>
+<header class="topbar">
+  <div class="wrap topbar-grid">
+    <div class="brand">
+      <div class="logo"></div>
+      <div class="brand-text">
+        <strong>AKL FASHION&BEAUTY</strong>
+        <p>
+          Bem-vinda(o)! Temos peças para todos os momentos, do descanso ao movimento,
+          com conforto, praticidade e confiança. Explore e encontre seu estilo.
+        </p>
       </div>
     </div>
 
-    <div class="wrap chips">
-      <button class="chip active" data-cat="Feminino" type="button">
-        <span class="chip-img">👗</span>
-        <span class="chip-txt">Feminino</span>
-      </button>
-      <button class="chip" data-cat="Infantil" type="button">
-        <span class="chip-img">🧒</span>
-        <span class="chip-txt">Infantil</span>
-      </button>
-      <button class="chip" data-cat="Masculino" type="button">
-        <span class="chip-img">🩳</span>
-        <span class="chip-txt">Masculino</span>
-      </button>
-      <button class="chip" data-cat="Todos" type="button">
-        <span class="chip-img">🛍️</span>
-        <span class="chip-txt">Todos</span>
-      </button>
+    <div class="actions">
+      <input type="search" placeholder="Buscar por produto" />
+      <a class="btn-whats" target="_blank"
+        href="https://wa.me/5541997304061?text=Ol%C3%A1!%20Quero%20fazer%20um%20pedido.%20Consulte%20tamanhos%20e%20cores%20dispon%C3%ADveis.">
+        Falar no WhatsApp
+      </a>
     </div>
-  </header>
+  </div>
+</header>
 
-  <!-- 3 banners grandes -->
-  <section class="wrap hero-banners">
-    <article class="hero-card">
-      <img src="banner1.png.png" alt="Banner 1" />
-    </article>
-    <article class="hero-card">
-      <img src="banner2.png.png" alt="Banner 2" />
-    </article>
-    <article class="hero-card">
-      <img src="banner3.png.png" alt="Banner 3" />
-    </article>
-  </section>
+<!-- BANNERS -->
+<section class="wrap hero-banners">
+  <div class="hero-card">
+    <img src="banner1.png.png" alt="Banner Conforto">
+  </div>
+  <div class="hero-card">
+    <img src="Banner2.png.png" alt="Banner Básico">
+  </div>
+  <div class="hero-card">
+    <img src="Banner3.png.png" alt="Banner AKL">
+  </div>
+</section>
 
-  <!-- Conteúdo -->
-  <main class="wrap content">
-    <!-- Sidebar filtros -->
-    <aside class="sidebar">
-      <h2 class="side-title">Produtos</h2>
+<main class="wrap">
+  <h2 class="titulo">Produtos</h2>
+  <p class="subtitulo">Clique em comprar e fale direto pelo WhatsApp.</p>
 
-      <div class="side-search">
-        <input id="sideSearch" type="search" placeholder="Pesquisar" />
-        <button id="sideSearchBtn" class="icon-btn" aria-label="Pesquisar">🔎</button>
-      </div>
+  <section id="grid-produtos" class="grid"></section>
+</main>
 
-      <nav class="side-links">
-        <button class="link active" data-filter="todos" type="button">Todos produtos</button>
-        <button class="link" data-filter="promo" type="button">Apenas promoções</button>
-      </nav>
+<a class="whats-float" target="_blank"
+  href="https://wa.me/5541997304061?text=Ol%C3%A1!%20Quero%20fazer%20um%20pedido.%20Consulte%20tamanhos%20e%20cores%20dispon%C3%ADveis.">
+  💬
+</a>
 
-      <div class="side-block">
-        <div class="side-block-title">Categorias</div>
-        <label class="check"><input type="checkbox" class="catCheck" value="Feminino" checked /> Feminino</label>
-        <label class="check"><input type="checkbox" class="catCheck" value="Infantil" checked /> Infantil</label>
-        <label class="check"><input type="checkbox" class="catCheck" value="Masculino" checked /> Masculino</label>
-      </div>
+<footer class="footer">
+  <p>© AKL Fashion & Beauty - Todos os direitos reservados</p>
+</footer>
 
-      <div class="side-block">
-        <div class="side-block-title">Marcas</div>
-        <label class="check"><input type="checkbox" class="brandCheck" value="Euro" checked /> Euro</label>
-        <label class="check"><input type="checkbox" class="brandCheck" value="Romance" checked /> Romance</label>
-      </div>
-
-      <div class="side-block">
-        <div class="side-block-title">Valor</div>
-        <div class="price-row">
-          <input id="minPrice" type="number" placeholder="Mínimo" />
-          <input id="maxPrice" type="number" placeholder="Máximo" />
-        </div>
-        <button id="applyFilters" class="btn-gray" type="button">Filtrar</button>
-        <button id="clearFilters" class="btn-link" type="button">Limpar filtros</button>
-      </div>
-    </aside>
-
-    <!-- Lista -->
-    <section class="list">
-      <div class="list-top">
-        <div>
-          <div class="list-title">Produtos</div>
-          <div class="list-sub"><span id="countProducts">0</span> produtos</div>
-        </div>
-
-        <div class="sort">
-          <label for="sortSelect">Ordenar por</label>
-          <select id="sortSelect">
-            <option value="relevantes">relevantes</option>
-            <option value="menor_preco">menor preço</option>
-            <option value="maior_preco">maior preço</option>
-            <option value="maior_desconto">maior desconto</option>
-          </select>
-        </div>
-      </div>
-
-      <div id="grid" class="grid"></div>
-    </section>
-  </main>
-
-  <!-- Whats flutuante -->
-  <a class="whats-float" target="_blank" rel="noopener"
-     href="https://wa.me/5541997304061?text=Ol%C3%A1!%20Quero%20fazer%20um%20pedido.%20Consulte%20tamanhos%20e%20cores%20dispon%C3%ADveis."
-     aria-label="WhatsApp">
-    🟢
-  </a>
-
-  <footer class="footer">
-    <div class="wrap footer-inner">
-      <p>© AKL Fashion & Beauty - Todos os direitos reservados</p>
-    </div>
-  </footer>
-
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
