--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -23,8 +24,7 @@
 
     <div class="actions">
       <input type="search" placeholder="Buscar por produto" />
-      <a class="btn-whats" target="_blank"
-        href="https://wa.me/5541997304061?text=Ol%C3%A1!%20Quero%20fazer%20um%20pedido.%20Consulte%20tamanhos%20e%20cores%20dispon%C3%ADveis.">
+      <a id="whatsHeader" class="btn-whats" target="_blank" rel="noopener" href="#">
         Falar no WhatsApp
       </a>
     </div>
@@ -51,8 +51,7 @@
   <section id="grid-produtos" class="grid"></section>
 </main>
 
-<a class="whats-float" target="_blank"
-  href="https://wa.me/5541997304061?text=Ol%C3%A1!%20Quero%20fazer%20um%20pedido.%20Consulte%20tamanhos%20e%20cores%20dispon%C3%ADveis.">
+<a id="whatsFloat" class="whats-float" target="_blank" rel="noopener" href="#">
   💬
 </a>
 
